[build-system]
requires = ["hatchling","requests ~= 2.28.0"]
build-backend = "hatchling.build"

[project]
name = "art_of_rally_leaderboard"
version = "0.1.2"
authors = [{name="Chad Jemmett", email="chad.jemmett@gmail.com"}]
description = "Python wapper for the Art of Rally leaderboard API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/chadjemmett/aor_leaderboard"
